Changed open graph images

--- a/public/index.html
+++ b/public/index.html
@@ -30,36 +30,36 @@
     />
 
     <!-- META -->
-    <title>My DAO</title>
+    <title>DjezisaDAO</title>
     <meta
       name="description"
-      content="Check out my DAO built with @_buildspace & @thirdweb_!"
+      content="DjezisaDAO for participating Djezisa community members"
     />
 
     <!-- Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://buildspace.so/" />
-    <meta property="og:title" content="My DAO" />
+    <meta property="og:url" content="https://djezisa.co.za" />
+    <meta property="og:title" content="DjezisaDAO" />
     <meta
       property="og:description"
-      content="Checkout my DAO built with _buildspace & thirdweb_!"
+      content="DjezisaDAO for participating Djezisa community members"
     />
     <meta
       property="og:image"
-      content="https://ipfs.thirdweb.com/ipfs/QmP45dfW7n6oM8DKH13nzdQrbukVC3EBQfo87N2bHczMV9"
+      content="%PUBLIC_URL%/android-chrome-512x512.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://buildspace.so/" />
-    <meta property="twitter:title" content="My DAO" />
+    <meta property="twitter:url" content="https://djezisa.co.za/" />
+    <meta property="twitter:title" content="DjezisaDAO" />
     <meta
       property="twitter:description"
-      content="Check out my DAO built with @_buildspace & @thirdweb_!"
+      content="DjezisaDAO for participating Djezisa community members"
     />
     <meta
       property="twitter:image"
-      content="https://ipfs.thirdweb.com/ipfs/QmP45dfW7n6oM8DKH13nzdQrbukVC3EBQfo87N2bHczMV9"
+      content="%PUBLIC_URL%/android-chrome-512x512.png"
     />
   </head>
   <body>
